--- a/8MileRD2/Views/Category/Index.cshtml
+++ b/8MileRD2/Views/Category/Index.cshtml
@@ -32,6 +32,14 @@
                 <td>
                     @obj.DisplayOrder
                 </td>
+                <td>
+                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                    <i class="bi bi-pencil-square"></i>Edit 
+                    </a>
+                    <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash-fill"></i>Delete
+                    </a>
+                </td>
             </tr>
         }
         
