--- a/8MileRD2/Views/Category/Index.cshtml
+++ b/8MileRD2/Views/Category/Index.cshtml
@@ -1,49 +1,59 @@
 ﻿@model List<Category>
-
-<div class="container">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">
-                Category list
-            </h2>
-        </div>
-        <div class="col-6 text-end pb-3">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                Create New Category
-            </a>
+<div class="card shadow border-0 mt-4">
+    <div class=" card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class=" text-white py-2">Category </h2>
+            </div>
         </div>
     </div>
-<table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-        <th>
-            Category Name 
-        </th>
-        <th>
-            Display Order
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-        @foreach(var obj in Model)
-        {
-            <tr>
-                <td>@obj.Name</td>
-                <td>
-                    @obj.DisplayOrder
-                </td>
-                <td>
-                    <a asp-controller="Category" asp-action="Save" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                    <i class="bi bi-pencil-square"></i>Edit 
+    <div class="card-body p-4">
+        <div class="container">
+            <div class="row pt-4">
+                <div class="col-6">
+                    <h2 class="text-primary">
+                        Category list
+                    </h2>
+                </div>
+                <div class="col-6 text-end pb-3">
+                    <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                        Create New Category
                     </a>
-                    <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                            <i class="bi bi-trash-fill"></i>Delete
-                    </a>
-                </td>
-            </tr>
-        }
-        
-    </tbody>
-</table>
+                </div>
+            </div>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>
+                            Category Name
+                        </th>
+                        <th>
+                            Display Order
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var obj in Model)
+                    {
+                        <tr>
+                            <td>@obj.Name</td>
+                            <td>
+                                @obj.DisplayOrder
+                            </td>
+                            <td>
+                                <a asp-controller="Category" asp-action="Save" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i>Edit
+                                </a>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash-fill"></i>Delete
+                                </a>
+                            </td>
+                        </tr>
+                    }
 
+                </tbody>
+            </table>
+
+        </div>
+    </div>
 </div>
