--- a/8MileRD2/Views/Category/Index.cshtml
+++ b/8MileRD2/Views/Category/Index.cshtml
@@ -3,17 +3,15 @@
     <div class=" card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class=" text-white py-2">Category </h2>
+                <h2 class=" text-white py-2">Category List</h2>
             </div>
         </div>
     </div>
-    <div class="card-body p-4">
+    <div class="card-body">
         <div class="container">
-            <div class="row pt-4">
+            <div class="row">
                 <div class="col-6">
-                    <h2 class="text-primary">
-                        Category list
-                    </h2>
+
                 </div>
                 <div class="col-6 text-end pb-3">
                     <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
