--- a/8MileRD2/wwwroot/css/site.css
+++ b/8MileRD2/wwwroot/css/site.css
@@ -7,6 +7,15 @@ a.navbar-brand {
     word-break: break-all;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
 
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
